[package]
name = "gethostid"
version = "0.1.0"
edition = "2021"

[dependencies]
local-ip-address = "0.4.9"


#[target.'cfg(windows)'.dependencies]
#windows = { version = "0.43.0", features = [
#    "Win32_System_SystemInformation",
#    "Win32_Foundation",
#] }


[profile.release]
lto = true
codegen-units = 1
