[package]
name = "gethostid-rs"
version = "0.1.1"
edition = "2021"
description = " Pure rust implementation of gethostid() from libc (used in hostid) "
authors = ["shadawck <shadawck@protonmail.com>"]
categories = ["os"]
keywords = ["rust", "unix", "hostid", "gethostid"]
readme = "README.md"
documentation = "https://docs.rs/gethostid-rs"
homepage = "https://github.com/shadawck/gethostid"
repository = "https://github.com/shadawck/gethostid"
license = "MIT OR Apache-2.0"


[dependencies]
local-ip-address = "0.4.9"


[profile.release]
lto = "thin"
codegen-units = 1
